# plasma-login-manager

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md
.reuse/: dep5
cmake/: FindPAM.cmake  FindXKB.cmake
data/: CMakeLists.txt
data/interfaces/: org.freedesktop.ConsoleKit.Manager.xml  org.freedesktop.ConsoleKit.Seat.xml  org.freedesktop.ConsoleKit.Session.xml
po/ar/: kcm_plasmalogin.po  plasma_login.po
po/bg/: kcm_plasmalogin.po  plasma_login.po
po/ca/: kcm_plasmalogin.po  plasma_login.po
po/ca@valencia/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/cs/: kcm_plasmalogin.po  plasma_login.po
po/de/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/es/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/eu/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/fi/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/fr/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/ga/: kcm_plasmalogin.po  plasma_login.po
po/gl/: kcm_plasmalogin.po  plasma_login.po
po/he/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/ia/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/id/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/is/: kcm_plasmalogin.po  plasma_login.po
po/it/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/ja/: plasma_login.po
po/ka/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/ko/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/lt/: kcm_plasmalogin.po  plasma_login.po
po/lv/: kcm_plasmalogin.po  plasma_login.po
po/nb/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/nl/: kcm_plasma_login.po  kcm_plasmalogin.po  plasma_login.po
po/nn/: kcm_plasmalogin.po
po/pl/: kcm_plasmalogin.po  plasma_login.po
po/pt_BR/: kcm_plasmalogin.po  (+1 more)
services/: CMakeLists.txt  plasmalogin.openrc.in  plasmalogin.rc.in  plasmalogin.service.in
src/: CMakeLists.txt
src/auth/: Auth.cpp  Auth.h  AuthMessages.h  AuthPrompt.cpp  AuthPrompt.h  AuthRequest.cpp  AuthRequest.h
src/common/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Configuration.cpp  Configuration.h  Constants.h.in  MainConfigLoader.cpp  MainConfigLoader.h  MessageHandler.h  Messages.h  SafeDataStream.cpp  SafeDataStream.h  Session.cpp  Session.h  SignalHandler.cpp  SignalHandler.h  SocketWriter.cpp  SocketWriter.h  VirtualTerminal.cpp  VirtualTerminal.h  XAuth.cpp  XAuth.h  mainconfig.kcfg  mainconfig.kcfgc
src/daemon/: CMakeLists.txt  DaemonApp.cpp  DaemonApp.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  DisplayServer.cpp  DisplayServer.h  Greeter.cpp  Greeter.h  LogindDBusTypes.cpp  LogindDBusTypes.h  Seat.cpp  Seat.h  SeatManager.cpp  SeatManager.h  SessionRunner.cpp  SessionRunner.h  SocketServer.cpp  SocketServer.h  Utils.h  WaylandDisplayServer.cpp  WaylandDisplayServer.h  XorgUserDisplayServer.cpp  XorgUserDisplayServer.h
src/daemon/backend/: ConsoleKit2Backend.cpp  ConsoleKit2Backend.h  FallbackBackend.cpp  FallbackBackend.h  LogindBackend.cpp  LogindBackend.h  SessionBackend.cpp  SessionBackend.h
src/frontend/: CMakeLists.txt  README.md
src/frontend/greeter/: CMakeLists.txt  Messages.sh  blurscreenbridge.cpp  blurscreenbridge.h  greetereventfilter.cpp  greetereventfilter.h  main.cpp  plasma-login.service.in  stateconfig.kcfg  stateconfig.kcfgc  windoweffectsproxy.cpp  windoweffectsproxy.h
src/frontend/greeter/backend/: GreeterProxy.cpp  GreeterProxy.h  Messages.h  SocketWriter.cpp  SocketWriter.h
src/frontend/greeter/mockbackend/: MockGreeterProxy.cpp  MockGreeterProxy.h
src/frontend/greeter/qml/: GreeterState.qml  KeyboardButton.qml  Login.qml  Main.qml  SessionButton.qml
src/frontend/greeter/qml/faces/: .face.icon
src/frontend/kcm/: CMakeLists.txt  Messages.sh  config.h.in  kcm.cpp  kcm.h  kcm_plasmalogin.json  plasmalogindata.cpp  plasmalogindata.h  plasmaloginsettings.kcfg  plasmaloginsettings.kcfgc  plasmaloginsettingsbase.cpp  plasmaloginsettingsbase.h
src/frontend/kcm/auth/: CMakeLists.txt  kcm_plasmalogin.actions  plasmaloginauthhelper.cpp  plasmaloginauthhelper.h
src/frontend/kcm/models/: sessionmodel.h  usersmodel.h
src/frontend/kcm/ui/: Appearance.qml  WallpaperConfig.qml  main.qml
src/frontend/prompt/: CMakeLists.txt  Login.qml  Session.cpp  SessionButton.qml  SessionModel.cpp  SessionModel.h  UserModel.cpp  UserModel.h  main.cpp  main.qml  resources.qrc
src/frontend/prompt/backend/: GreeterProxy.cpp  GreeterProxy.h  Messages.h  SocketWriter.cpp  SocketWriter.h
src/frontend/prompt/greetd/: Session.cpp  SessionModel.cpp
src/frontend/prompt/mockbackend/: MockGreeterProxy.cpp  MockGreeterProxy.h
src/frontend/prompt/qml/: Login.qml  SessionButton.qml
src/frontend/settings/: CMakeLists.txt  config.h.in  plasmaloginsettings.cpp  plasmaloginsettings.h  plasmaloginsettingsbase.kcfg  plasmaloginsettingsbase.kcfgc  plasmaloginsettingsdefaults.cpp  plasmaloginsettingsdefaults.h  wallpaperintegration.cpp  wallpaperintegration.h  wallpapersettings.cpp  wallpapersettings.h
src/frontend/settings/models/: sessionmodel.cpp  sessionmodel.h  usermodel.cpp  usermodel.h
src/frontend/startkde/: CMakeLists.txt  plasma-login-kwin_wayland.service.in  plasma-login-wayland.target  startplasma.cpp  startplasma.h  startplasmalogin-wayland.cpp
src/frontend/wallpaper/: CMakeLists.txt  WallpaperFader.qml  main.cpp  main.qml  plasma-wallpaper.service.in  wallpaperapp.cpp  wallpaperapp.h  wallpaperwindow.cpp  wallpaperwindow.h
src/frontend/wallpaper/settings/: CMakeLists.txt  kscreenlockersettings.kcfg  wallpaper_integration.cpp  wallpaper_integration.h
src/helper/: Backend.cpp  Backend.h  CMakeLists.txt  HelperApp.cpp  HelperApp.h  HelperStartWayland.cpp  HelperStartX11User.cpp  UserSession.cpp  UserSession.h  XAuth.cpp  xorguserhelper.cpp  xorguserhelper.h
src/helper/backend/: PamBackend.cpp  PamBackend.h  PamHandle.cpp  PamHandle.h
test/: CMakeLists.txt  ConfigurationTest.cpp  ConfigurationTest.h  QMLThemeConfigTest.cpp  QMLThemeConfigTest.qml  SessionTest.cpp
(+29 files in other folders)
