## SPDX-License-Identifier: BSD-2-Clause
# SPDX-FileCopyrightText: David Edmundson <kde@davidedmundson.co.uk>
# SPDX-FileCopyrightText: Oliver Beard <olib141@outlook.com>
add_subdirectory(settings)
add_subdirectory(wallpaper)
add_subdirectory(greeter)
add_subdirectory(startkde)
add_subdirectory(kcm)
